# vulkan-journey

./: .clangd  .clangd-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  imgui.ini
include/first-triangle/: app.hpp
include/second-triangle/: deletion-queue.hpp  second-triangle.hpp  vk-descriptors.hpp  vk-engine.hpp  vk-image.hpp  vk-initializer.hpp  vk-pipelines.hpp
shaders/: gradient.comp
src/: CMakeLists.txt  main.cpp
src/first-triangle/: app.cpp
src/second-triangle/: deletion-queue.cpp  second-triangle.cpp  vk-descriptors.cpp  vk-engine.cpp  vk-image.cpp  vk-initializer.cpp  vk-pipelines.cpp
